--- a/public/styles/club_dashboard.css
+++ b/public/styles/club_dashboard.css
@@ -852,6 +852,8 @@
 
 .club-dashboard-modal-actions {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 1rem;
   justify-content: center;
   margin-top: 1rem;
@@ -921,4 +923,13 @@
     min-width: 100px;
     font-size: 0.95rem;
   }
+}
+
+
+#cancelPasswordBtn{
+  max-width: max-content;
+}
+
+#clubLogo{
+  cursor: pointer;
 }
